--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_welcome">title_welcome_activity</string>
+    <string name="pen">Pen</string>
+    <string name="pencil">Pencil</string>
 </resources>
